# qaspen-migrations

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
qaspen_migrations/: __main__.py  cli.py  exceptions.py  migrations.py  models.py  schema.py  settings.py  table_loader.py  tables.py  types_mapping.py  utils.py
qaspen_migrations/ddl/: __init__.py  base.py  mapping.py  postgres.py
qaspen_migrations/inspector/: __init__.py  base.py  dump_helpers.py  mapping.py  postgres.py  schema.py
qaspen_migrations/migration/: base.py  filler.py  template.j2
qaspen_migrations/migrations/: applyer.py  base.py  maker.py  template.j2  versioner.py  writer.py
qaspen_migrations/operations/: __init__.py  base.py  generator.py  mapping.py  postgres.py
qaspen_migrations/schema/: __init__.py  column_info.py  migration.py  migration_changes.py
qaspen_migrations/templates/: __init__.py  filler.py
qaspen_migrations/utils/: __init__.py  column_repr.py  common.py  loaders.py  parsing.py
tests/: test_default.py
