[tool.poetry]
name = "qaspen-migrations"
version = "0.0.1a"
description = ""
authors = ["reqww <my.gurbanov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
anyio = "^4.0.0"
pydantic = "^2.4.2"
click = "^8.1.7"
toml = "^0.10.2"
qaspen = "^0.0.9a0"
qaspen-psycopg = "^0.0.5a0"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.2.1"
yesqa = "^1.5.0"
mypy = "^1.6.1"
ruff = "^0.1.4"
black = "^23.11.0"
isort = "^5.12.0"
pytest = "^7.4.3"
pytest-xdist = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
