[tool.poetry]
name = "qaspen-migrations"
version = "0.0.1a"
description = ""
authors = ["reqww <my.gurbanov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
anyio = "^4.0.0"
pydantic = "^2.4.2"
click = "^8.1.7"
toml = "^0.10.2"
qaspen = "^0.0.9a0"
qaspen-psycopg = "^0.0.5a0"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.2.1"
yesqa = "^1.5.0"
mypy = "^1.6.1"
ruff = "^0.1.4"
black = "^23.11.0"
isort = "^5.12.0"
pytest = "^7.4.3"
pytest-xdist = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
select = ["ALL"]
fixable = ["ALL"]
ignore = ["ANN401", "D100", "D107", "SLF001", "D105", "TRY003", "PLR0913", "FBT001", "FBT002", "S608", "S101"]
exclude = ["qaspen/fields/operators.py"]

[tool.black]
line-length = 79

[tool.mypy]
strict = true

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79
