[tool.poetry]
name = "qaspen-migrations"
version = "0.0.1a"
description = ""
authors = ["reqww <my.gurbanov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
anyio = "^4.0.0"
click = "^8.1.7"
toml = "^0.10.2"
qaspen-psycopg = "^0.0.9a0"
aiofile = "^3.8.8"
pytz = "^2024.1"
types-pytz = "^2024.1.0.20240203"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.2.1"
yesqa = "^1.5.0"
mypy = "^1.6.1"
ruff = "^0.1.4"
black = "^23.11.0"
isort = "^5.12.0"
pytest = "^7.4.3"
pre-commit = "^3.5.0"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.5.0"
yarl = "^1.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
select = ["ALL"]
fixable = ["ALL"]
ignore = [
    'ANN101', 'ANN401',
    'D100', 'D101', 'D102', 'D103', 'D105', 'D107',
    'EM101', 'EM102',
    'FBT001', 'FBT002',
    'FIX002',
    'N805',
    'PLR0913',
    'S101',
    'S608',
    'SLF001',
    'TD003',
    'TRY003'
]
exclude = ["qaspen/columns/operators.py"]

[tool.ruff.isort]
lines-after-imports = 2
no-lines-before = ["standard-library", "local-folder"]


[tool.black]
line-length = 79

[tool.mypy]
strict = true

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79


[tool.qaspen]
engine_path = "test.engine:engine"
